application/frontend/src/styles/frontendTemplate.css
body .container {
  color: white;
  
  background: rgb(85,214,67);
  background: linear-gradient(170deg, #55d643 0%, rgba(42,143,235,1) 100%);
  z-index: 0;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.background {
  height: 100vh;
  width: 100vw;
  z-index: 1;
  opacity: 1;
  transition: opacity .25s ease-in-out;
  position: fixed;

  background: rgb(176,82,246);
  background: linear-gradient(346deg, rgba(176,82,246,1) 0%, rgba(240,85,85,1) 100%);
}

.fade {
  opacity: 0;
}

.foreground {
  z-index: 2;
}

.rightSide {
  float: right;
}

.signUp {
  padding: 1em 2em;
  transition-duration: 0.25s;
  border-radius: 5px;
  background: grey;
}

.signUp:hover {
  background: linear-gradient(346deg, rgba(176,82,246,1) 0%, rgba(240,85,85,1) 100%);
}

.wrapper { 
    display: grid;
    grid-template-areas: 
      "header header header"
      "side map map"
      "footer footer footer";
    grid-template-rows: 80px 1fr 70px;  
    grid-template-columns: 30% 1fr 15%;
    grid-row-gap: 30px;
    grid-column-gap: 30px;
    height: 100vh;

    margin: 0;

    }  
 
  .main-head {
    grid-area: header;

    background: rgb(42, 42, 42);
    
    display: flex;
    justify-content: left;
    align-items: center;

    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    }
  .main-footer {
    grid-area: footer;
    bottom: 0;
    position: absolute;
    height: 6vh;
    width: 100vw;
    background: rgb(42, 42, 42);
    color: white;
    }
  .map { 
    grid-area: map;

    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    }
  .side { 
    grid-area: side; 
    height: 100%;
    overflow-y: scroll;

    background: rgb(42, 42, 42);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    }
  /* Stack the layout on small devices/viewports. */
  @media all and (max-width: 1000px) {
    .wrapper { 
      grid-template-areas: 
        "header"
        "map"
        "side"
        "footer";
      grid-template-rows: 80px 1fr 70px 1fr 70px;  
      grid-template-columns: 1fr;

      grid-row-gap: 0;
   }
   .main-head {
      font-size: 1em;
      height: 8vh;
      margin-bottom: 2vh;
    }
   .map { 
      height: 45vh;
    }
    .side {
      height: 40vh;
    }
    .main-footer {
      height: 5vh;
      
    }
  }

